// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contentReducer reducer should LOAD_CONTENT 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {
    "1": null,
  },
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should LOAD_CONTENT_FAIL 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {
    "1": undefined,
  },
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should LOAD_CONTENT_GROUP_SUCCESS 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {},
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "type": Array [],
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should LOAD_CONTENT_SUCCESS 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {},
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should LOAD_ROUTE_PAGE 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {
    "undefined": null,
  },
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should LOAD_ROUTE_PAGE_FAIL 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {
    "undefined": undefined,
  },
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should LOAD_ROUTE_PAGE_SUCCESS 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {},
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {
    "route": Object {},
  },
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should LOAD_SHARED_PROMO_SUCCESS 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {},
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {
    "1": Array [],
  },
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;

exports[`contentReducer reducer should return initialState 1`] = `
Object {
  "categoryIncludes": Object {},
  "contentItems": Object {},
  "errors": Object {},
  "favoriteIncludes": Object {},
  "namedSharedItems": Object {},
  "productIncludes": Object {},
  "profileIncludes": Object {},
  "routePages": Object {},
  "sharedPromos": Object {},
  "tagIncludes": Object {},
  "userIncludes": Object {},
  "videoIncludes": Object {},
}
`;
